welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:9: error: ')' expected but 'for' found.
   for (cnt <-1 to nbPas){
   ^